welcome.lessons.welcome.bat.bool1.IcyHot.scala.error
icyHot:4: error: type mismatch;
 found   : Unit
 required: Boolean
if (temp1<0 && temp2>100)
^